Fixes #30330 - Added word-wrap for description field

--- a/app/assets/stylesheets/foreman_remote_execution/job_invocations.scss
+++ b/app/assets/stylesheets/foreman_remote_execution/job_invocations.scss
@@ -29,3 +29,7 @@ div.infoblock {
     }
   }
 }
+
+.text_warp{
+  word-wrap: break-word;
+}
